# sunbolt

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  TASK.md
config/: production.env.example
crates/sunbolt-agent/: Cargo.toml
crates/sunbolt-agent/src/: lib.rs  main.rs
crates/sunbolt-audit/: Cargo.toml
crates/sunbolt-audit/src/: chain.rs  export.rs  lib.rs  log.rs  redaction.rs  types.rs
crates/sunbolt-auth/: Cargo.toml
crates/sunbolt-auth/src/: lib.rs  mfa.rs  passkeys.rs  rbac.rs  recovery_codes.rs  totp.rs
crates/sunbolt-common/: Cargo.toml
crates/sunbolt-common/src/: lib.rs
crates/sunbolt-control/: Cargo.toml
crates/sunbolt-control/src/: audit.rs  auth.rs  config.rs  error.rs  ha.rs  lib.rs  main.rs  node.rs  observability.rs  rate_limit.rs  routing.rs  security.rs  state.rs
crates/sunbolt-control/src/agent/: mod.rs
crates/sunbolt-control/src/routes/: agent.rs  audit.rs  auth.rs  mod.rs  node.rs
crates/sunbolt-control/src/terminal/: mod.rs  session_registry.rs
crates/sunbolt-protocol/: Cargo.toml
crates/sunbolt-protocol/src/: lib.rs  mesh.rs  transport.rs
crates/sunbolt-storage/: Cargo.toml
crates/sunbolt-storage/src/: config.rs  error.rs  lib.rs
crates/sunbolt-storage/src/repositories/: audit.rs  auth.rs  mod.rs  node.rs  terminal.rs
crates/sunbolt-terminal/: Cargo.toml
crates/sunbolt-terminal/src/: lib.rs
crates/sunbolt-ui/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
crates/sunbolt-ui/assets/: sunbolt-terminal-workspace.css  sunbolt.css
crates/sunbolt-ui/src/: api_client.rs  browser_bridge.rs  components.rs  lib.rs  main.rs  pages.rs  shell.rs  terminal_workspace.rs  viewport_validation.rs
crates/sunbolt-ui/styles/: tailwind.css
deploy/nginx/: sunbolt.conf
docs/: agent-connection.md  agent-transport.md  audit-events.md  backup-restore.md  deployment.md  known-limitations.md  local-development.md  phase6-control-plane-ha.md  phase6-mesh-research.md  quic-fast-path.md  security-model.md  terminal-lifecycle.md  ui-architecture.md
migrations/: Cargo.toml
migrations/src/: lib.rs  m20260502_000001_create_users_table.rs  m20260502_000002_create_sessions_table.rs  m20260502_000003_create_terminal_sessions_table.rs  m20260502_000004_create_audit_logs_table.rs  m20260502_000005_create_nodes_table.rs  m20260502_000006_create_node_credentials_table.rs  m20260502_000007_create_node_heartbeats_table.rs  m20260502_000008_create_enrollment_tokens_table.rs  m20260503_000009_create_auth_factors_table.rs  m20260505_000010_create_recovery_codes_table.rs  m20260505_000011_create_passkey_credentials_table.rs  m20260505_000012_create_rbac_tables.rs
