[workspace]
members = [
    "crates/sunbolt-agent",
    "crates/sunbolt-audit",
    "crates/sunbolt-auth",
    "crates/sunbolt-common",
    "crates/sunbolt-control",
    "crates/sunbolt-protocol",
    "crates/sunbolt-storage",
    "crates/sunbolt-terminal",
    "crates/sunbolt-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8.9", features = ["ws"] }
dioxus = { version = "=0.7.6", default-features = false, features = ["minimal"] }
futures-util = "0.3"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
tower = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
