[workspace]
members = [
    "crates/sunbolt-agent",
    "crates/sunbolt-audit",
    "crates/sunbolt-auth",
    "crates/sunbolt-common",
    "crates/sunbolt-control",
    "crates/sunbolt-protocol",
    "crates/sunbolt-storage",
    "crates/sunbolt-terminal",
    "crates/sunbolt-ui",
    "migrations",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8.9", features = ["ws"] }
dioxus = { version = "=0.7.6", default-features = false, features = ["minimal"] }
futures-util = "0.3"
portable-pty = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
