[package]
name = "sunbolt-agent"
description = "Sunbolt managed node agent skeleton."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
sunbolt-common = { path = "../sunbolt-common" }
sunbolt-protocol = { path = "../sunbolt-protocol" }
sunbolt-terminal = { path = "../sunbolt-terminal" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sunbolt-agent"
path = "src/main.rs"

[lints]
workspace = true
