[package]
name = "sunbolt-agent"
description = "Sunbolt managed node agent skeleton."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
sunbolt-common = { path = "../sunbolt-common" }
sunbolt-protocol = { path = "../sunbolt-protocol" }
sunbolt-terminal = { path = "../sunbolt-terminal" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sunbolt-agent"
path = "src/main.rs"

[lints]
workspace = true
