[package]
name = "sunbolt-audit"
description = "Sunbolt audit logging with append-only hash chain integrity."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
