[package]
name = "sunbolt-auth"
description = "Sunbolt authentication and authorization skeleton."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rand = "0.8"
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
