[package]
name = "sunbolt-auth"
description = "Sunbolt authentication and authorization skeleton."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
sunbolt-common = { path = "../sunbolt-common" }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
