[package]
name = "sunbolt-control"
description = "Sunbolt control plane."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sunbolt-auth = { path = "../sunbolt-auth" }
sunbolt-common = { path = "../sunbolt-common" }
sunbolt-protocol = { path = "../sunbolt-protocol" }
sunbolt-terminal = { path = "../sunbolt-terminal" }
tokio = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
