[package]
name = "sunbolt-control"
description = "Sunbolt control plane."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sunbolt-audit = { path = "../sunbolt-audit" }
sunbolt-auth = { path = "../sunbolt-auth" }
sunbolt-common = { path = "../sunbolt-common" }
sunbolt-protocol = { path = "../sunbolt-protocol" }
sunbolt-storage = { path = "../sunbolt-storage" }
sunbolt-terminal = { path = "../sunbolt-terminal" }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sunbolt-control"
path = "src/main.rs"

[lints]
workspace = true
