[package]
name = "sunbolt-storage"
description = "Sunbolt storage skeleton."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
sea-orm = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
